@@ -19,18 +19,6 @@ HOSTS:
       # Puppet Deps
       - 'yum install -y ntpdate rsync openssl openssh-server'
 
-  el6-compliance-map:
-    roles:
-      - client
-    platform: el-6-x86_64
-    hypervisor: docker
-    image: oraclelinux:6
-    #docker_cmd: '/usr/sbin/init'
-    docker_preserve_image: true
-    docker_image_commands:
-      # Puppet Deps
-      - 'yum install -y ntpdate rsync openssl'
-
   el8-compliance-map:
     roles:
       - client
