@@ -14,13 +14,6 @@ HOSTS:
     box:        onyxpoint/oel-7-x86_64
     hypervisor: <%= hypervisor %>
 
-  oel6:
-    roles:
-      - client
-    platform:   el-6-x86_64
-    box:        onyxpoint/oel-6-x86_64
-    hypervisor: <%= hypervisor %>
-
   oel8:
     roles:
       - client
